--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     padding: 0;
     color: white;
-    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Lato', sans-serif;
     font-weight: 700;
     font-size: 5rem;
 }
